--- a/OLD/EC/openning_balance_cust_osgi.jrxml
+++ b/OLD/EC/openning_balance_cust_osgi.jrxml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version 6.8.0.final utlizzo versione della libreria JasperReports6.8.0-2ed8dfabb690ff337a5797129f2cd92902b0c87b  -->
+<!-- Created with Jaspersoft Studio version 6.12.2.final utlizzo versione della libreria JasperReports6.12.2-75c5e90a222ab406e416cbf590a5397028a52de3  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="OpenningBalanceCust" pageWidth="535" pageHeight="842" whenNoDataType="NoPages" columnWidth="535" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" uuid="289eeb9a-1c87-40d1-becf-f5011e230f15">
 	<property name="ireport.scriptlethandling" value="0"/>
 	<property name="ireport.encoding" value="UTF-8"/>
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
-	<import value="net.sf.jasperreports.engine.data.*"/>
 	<import value="java.util.*"/>
+	<import value="net.sf.jasperreports.engine.data.*"/>
 	<import value="net.sf.jasperreports.engine.*"/>
 	<style name="ob"/>
 	<parameter name="C_BPartner_ID" class="java.lang.Integer">
@@ -55,7 +55,7 @@
 	</pageHeader>
 	<columnHeader>
 		<band height="23" splitType="Stretch">
-			<textField isStretchWithOverflow="true" pattern="#,##0.00" isBlankWhenNull="true">
+			<textField textAdjust="StretchHeight" pattern="#,##0.00" isBlankWhenNull="true">
 				<reportElement key="textField" mode="Opaque" x="312" y="1" width="221" height="18" backcolor="#FFFFFF" uuid="975de3ea-a0ce-4dde-aabf-222492e62ca6"/>
 				<box leftPadding="2" rightPadding="2">
 					<pen lineWidth="0.25"/>
