--- a/OLD/EC/customer_statement.jrxml
+++ b/OLD/EC/customer_statement.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version 6.8.0.final utlizzo versione della libreria JasperReports6.8.0-2ed8dfabb690ff337a5797129f2cd92902b0c87b  -->
+<!-- Created with Jaspersoft Studio version 6.12.2.final utlizzo versione della libreria JasperReports6.12.2-75c5e90a222ab406e416cbf590a5397028a52de3  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="CustomerStatement" pageWidth="595" pageHeight="842" whenNoDataType="NoDataSection" columnWidth="535" leftMargin="30" rightMargin="30" topMargin="20" bottomMargin="20" uuid="3f9a3fdd-695b-4142-9a11-97cd12201c0d">
 	<property name="ireport.scriptlethandling" value="0"/>
 	<property name="ireport.encoding" value="UTF-8"/>
@@ -7,9 +7,9 @@
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="alge idempiere"/>
-	<import value="net.sf.jasperreports.engine.*"/>
 	<import value="java.util.*"/>
 	<import value="net.sf.jasperreports.engine.data.*"/>
+	<import value="net.sf.jasperreports.engine.*"/>
 	<style name="Title"/>
 	<style name="SubTitle"/>
 	<style name="Address"/>
@@ -166,7 +166,7 @@ AND bp.IsCustomer='Y']]>
 				</textElement>
 				<textFieldExpression><![CDATA["Estratto conto cliente per: " + $F{BPARTNER}]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true" pattern="dd/MM/yyyy" isBlankWhenNull="true">
+			<textField textAdjust="StretchHeight" pattern="dd/MM/yyyy" isBlankWhenNull="true">
 				<reportElement key="textField-2" style="SubTitle" x="0" y="29" width="535" height="15" forecolor="#000000" uuid="2c750ffc-9757-4bd2-af10-cb38f6db8cd1"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -185,14 +185,14 @@ AND bp.IsCustomer='Y']]>
 					<pen lineWidth="1.0" lineStyle="Solid"/>
 				</graphicElement>
 			</line>
-			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+			<textField textAdjust="StretchHeight" isBlankWhenNull="true">
 				<reportElement key="textField-3" positionType="Float" stretchType="RelativeToTallestObject" x="0" y="69" width="304" height="15" uuid="33397a79-c2a7-43bc-9e9f-984fa4695e3f"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="DejaVu Sans" size="8"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{address1}]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+			<textField textAdjust="StretchHeight" isBlankWhenNull="true">
 				<reportElement key="textField-4" positionType="Float" stretchType="RelativeToTallestObject" x="0" y="84" width="304" height="15" isRemoveLineWhenBlank="true" uuid="f79423a8-c13e-4e99-9ea0-840771ed7a6d">
 					<printWhenExpression><![CDATA[new Boolean($F{address2}!=null)]]></printWhenExpression>
 				</reportElement>
@@ -201,21 +201,21 @@ AND bp.IsCustomer='Y']]>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{address2}]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+			<textField textAdjust="StretchHeight" isBlankWhenNull="true">
 				<reportElement key="textField-6" positionType="Float" stretchType="RelativeToTallestObject" x="0" y="114" width="304" height="15" uuid="8358cbef-94de-4d3c-af08-a99da22342ac"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="DejaVu Sans" size="8"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{postal}]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+			<textField textAdjust="StretchHeight" isBlankWhenNull="true">
 				<reportElement key="textField-7" positionType="Float" stretchType="RelativeToTallestObject" x="384" y="69" width="150" height="15" uuid="1524e70e-eaa6-4a75-9668-f69badecb83f"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="DejaVu Sans" size="8"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{phone}]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+			<textField textAdjust="StretchHeight" isBlankWhenNull="true">
 				<reportElement key="textField-8" positionType="Float" stretchType="RelativeToTallestObject" x="384" y="84" width="150" height="15" isRemoveLineWhenBlank="true" uuid="9abfd44a-3f65-43ac-b9c8-2606fc1178f1">
 					<printWhenExpression><![CDATA[new Boolean($F{phone2}!=null)]]></printWhenExpression>
 				</reportElement>
@@ -224,14 +224,14 @@ AND bp.IsCustomer='Y']]>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{phone2}]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+			<textField textAdjust="StretchHeight" isBlankWhenNull="true">
 				<reportElement key="textField-9" positionType="Float" stretchType="RelativeToTallestObject" x="384" y="99" width="150" height="15" uuid="b83aa34e-b43e-46c6-bcca-fa64a1eb854a"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="DejaVu Sans" size="8"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{fax}]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+			<textField textAdjust="StretchHeight" isBlankWhenNull="true">
 				<reportElement key="textField-5" positionType="Float" stretchType="RelativeToTallestObject" x="0" y="103" width="304" height="15" uuid="c6cae448-e0d8-4170-956a-4a68af3fe176"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="DejaVu Sans" size="8"/>
