--- a/04.CicloAttivo_QuotetoInvoice/ShipmentCustomer/m_inout0045m - new2020/m_inout_vat.jrxml
+++ b/04.CicloAttivo_QuotetoInvoice/ShipmentCustomer/m_inout0045m - new2020/m_inout_vat.jrxml
@@ -1,18 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.12.2.final utlizzo versione della libreria JasperReports6.12.2-75c5e90a222ab406e416cbf590a5397028a52de3  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="c_invoice_withholding_sub_vat" pageWidth="318" pageHeight="56" whenNoDataType="AllSectionsNoDetail" columnWidth="318" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" uuid="4c8f36cd-baba-4cde-91f5-8934be944fd3">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="c_invoice_withholding_sub_vat" pageWidth="278" pageHeight="56" whenNoDataType="AllSectionsNoDetail" columnWidth="278" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" uuid="4c8f36cd-baba-4cde-91f5-8934be944fd3">
 	<property name="ireport.zoom" value="2.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
-	<property name="com.jaspersoft.studio.unit." value="pixel"/>
-	<property name="com.jaspersoft.studio.unit.pageHeight" value="pixel"/>
-	<property name="com.jaspersoft.studio.unit.pageWidth" value="pixel"/>
-	<property name="com.jaspersoft.studio.unit.topMargin" value="pixel"/>
-	<property name="com.jaspersoft.studio.unit.bottomMargin" value="pixel"/>
-	<property name="com.jaspersoft.studio.unit.leftMargin" value="pixel"/>
-	<property name="com.jaspersoft.studio.unit.rightMargin" value="pixel"/>
-	<property name="com.jaspersoft.studio.unit.columnWidth" value="pixel"/>
-	<property name="com.jaspersoft.studio.unit.columnSpacing" value="pixel"/>
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="iDempiere"/>
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
 	<parameter name="RECORD_ID" class="java.math.BigDecimal">
@@ -51,7 +42,7 @@ where m_inoutline.m_inout_id=$P{RECORD_ID}
 	<title>
 		<band height="12">
 			<staticText>
-				<reportElement mode="Opaque" x="0" y="0" width="318" height="12" backcolor="#E3E3E3" uuid="e1548370-6946-4bd7-9ebd-8e8db8716fa0"/>
+				<reportElement mode="Opaque" x="0" y="0" width="278" height="12" backcolor="#E3E3E3" uuid="e1548370-6946-4bd7-9ebd-8e8db8716fa0"/>
 				<box>
 					<pen lineWidth="0.5"/>
 				</box>
@@ -66,9 +57,11 @@ where m_inoutline.m_inout_id=$P{RECORD_ID}
 		<band height="8" splitType="Stretch">
 			<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.FreeLayout"/>
 			<frame>
-				<reportElement x="0" y="0" width="318" height="8" uuid="d32d9aa7-b777-4009-8fd7-ea7cd0621508"/>
+				<reportElement x="0" y="0" width="278" height="8" uuid="d32d9aa7-b777-4009-8fd7-ea7cd0621508">
+					<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.HorizontalRowLayout"/>
+				</reportElement>
 				<staticText>
-					<reportElement x="0" y="0" width="84" height="8" uuid="ef0f1b6e-98e2-42f6-9910-0344e9ba490f">
+					<reportElement x="0" y="0" width="94" height="8" uuid="ef0f1b6e-98e2-42f6-9910-0344e9ba490f">
 						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="9007c237-8f08-40ee-9313-ccb685f26f65"/>
 					</reportElement>
 					<box leftPadding="5">
@@ -84,7 +77,7 @@ where m_inoutline.m_inout_id=$P{RECORD_ID}
 					<text><![CDATA[COD. IVA]]></text>
 				</staticText>
 				<staticText>
-					<reportElement x="84" y="0" width="166" height="8" uuid="16e9f80d-2efa-4e09-b983-7180fc252fa6">
+					<reportElement x="94" y="0" width="92" height="8" uuid="16e9f80d-2efa-4e09-b983-7180fc252fa6">
 						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="e8dd768f-0488-461d-b85b-820cb0e58892"/>
 					</reportElement>
 					<box>
@@ -100,7 +93,7 @@ where m_inoutline.m_inout_id=$P{RECORD_ID}
 					<text><![CDATA[IMPONIBILE]]></text>
 				</staticText>
 				<staticText>
-					<reportElement x="250" y="0" width="68" height="8" uuid="abbf0688-cd2b-4cea-9fd5-1879f730919f">
+					<reportElement x="186" y="0" width="92" height="8" uuid="abbf0688-cd2b-4cea-9fd5-1879f730919f">
 						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="e519546f-64bb-4115-94bd-3440f41ddcbe"/>
 					</reportElement>
 					<box rightPadding="10">
@@ -122,9 +115,11 @@ where m_inoutline.m_inout_id=$P{RECORD_ID}
 		<band height="12">
 			<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.FreeLayout"/>
 			<frame>
-				<reportElement x="0" y="0" width="318" height="12" isRemoveLineWhenBlank="true" uuid="5e964626-13cb-4c1e-b1f0-09d67d66f1b4"/>
+				<reportElement x="0" y="0" width="278" height="12" isRemoveLineWhenBlank="true" uuid="5e964626-13cb-4c1e-b1f0-09d67d66f1b4">
+					<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.HorizontalRowLayout"/>
+				</reportElement>
 				<textField>
-					<reportElement x="0" y="0" width="84" height="12" uuid="36fb7770-f5e6-4fd3-a1e0-2a06a9273efa">
+					<reportElement x="0" y="0" width="94" height="12" uuid="36fb7770-f5e6-4fd3-a1e0-2a06a9273efa">
 						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="9007c237-8f08-40ee-9313-ccb685f26f65"/>
 					</reportElement>
 					<box leftPadding="5">
@@ -140,7 +135,7 @@ where m_inoutline.m_inout_id=$P{RECORD_ID}
 					<textFieldExpression><![CDATA[$F{taxindicator}]]></textFieldExpression>
 				</textField>
 				<textField pattern="¤#,###.00;¤-#,###.00">
-					<reportElement x="84" y="0" width="166" height="12" uuid="e1baf150-6912-429a-810c-0c12c467e01b">
+					<reportElement x="94" y="0" width="92" height="12" uuid="e1baf150-6912-429a-810c-0c12c467e01b">
 						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="e8dd768f-0488-461d-b85b-820cb0e58892"/>
 					</reportElement>
 					<box>
@@ -156,7 +151,7 @@ where m_inoutline.m_inout_id=$P{RECORD_ID}
 					<textFieldExpression><![CDATA[$F{taxbaseamt}]]></textFieldExpression>
 				</textField>
 				<textField pattern="¤#,##0.00;¤-#,##0.00">
-					<reportElement x="250" y="0" width="68" height="12" uuid="266b6910-d15c-46c3-90fa-7285193f4659">
+					<reportElement x="186" y="0" width="92" height="12" uuid="266b6910-d15c-46c3-90fa-7285193f4659">
 						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="e519546f-64bb-4115-94bd-3440f41ddcbe"/>
 					</reportElement>
 					<box rightPadding="10">
