--- a/PurchaseOrder/c_order_po.jrxml
+++ b/PurchaseOrder/c_order_po.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version 6.6.0.final utlizzo versione della libreria JasperReports5.1.0  -->
+<!-- Created with Jaspersoft Studio version 6.9.0.final utlizzo versione della libreria JasperReports6.9.0-cb8f9004be492ccc537180b49c026951f4220bf3  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="c_order_po" pageWidth="595" pageHeight="842" whenNoDataType="NoDataSection" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" isSummaryWithPageHeaderAndFooter="true" uuid="2e03aa4a-78f2-4014-adc8-1ab4143b4d6e">
 	<property name="ireport.zoom" value="1.5"/>
 	<property name="ireport.x" value="0"/>
@@ -30,7 +30,7 @@
 		</box>
 		<paragraph lineSpacing="Single"/>
 	</style>
-	<style name="Crosstab Data Text" hAlign="Center">
+	<style name="Crosstab Data Text" hTextAlign="Center" hImageAlign="Center">
 		<paragraph lineSpacing="Single"/>
 	</style>
 	<style name="Title" fontName="Times New Roman" fontSize="50" isBold="true" pdfFontName="Times-Bold">
@@ -460,7 +460,7 @@ ORDER BY
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="371" splitType="Stretch">
+		<band height="342" splitType="Stretch">
 			<rectangle radius="10">
 				<reportElement positionType="Float" x="3" y="249" width="197" height="20" forecolor="#999999" backcolor="#DFDFDF" uuid="78fd5576-8741-46bb-83ad-5d49f5c6678b"/>
 			</rectangle>
@@ -468,7 +468,7 @@ ORDER BY
 				<reportElement positionType="Float" x="200" y="249" width="353" height="20" forecolor="#999999" backcolor="#DFDFDF" uuid="c008b40b-2ab6-429d-ad7e-156594016ad5"/>
 			</rectangle>
 			<rectangle radius="10">
-				<reportElement positionType="Float" x="3" y="273" width="549" height="65" forecolor="#999999" backcolor="#DFDFDF" uuid="3a2603c3-c2c9-4bd0-be79-6f93ade827ba"/>
+				<reportElement positionType="Float" x="3" y="273" width="549" height="52" forecolor="#999999" backcolor="#DFDFDF" uuid="3a2603c3-c2c9-4bd0-be79-6f93ade827ba"/>
 			</rectangle>
 			<rectangle radius="10">
 				<reportElement positionType="Float" x="332" y="177" width="210" height="45" forecolor="#999999" backcolor="#DFDFDF" uuid="3bd78c71-ff66-4763-bded-10bd3d348a9a"/>
@@ -517,14 +517,6 @@ ORDER BY
 				<textFieldExpression><![CDATA[$P{RESOURCE}.getString("datepromised_"+$F{ad_language})]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement positionType="Float" x="9" y="324" width="105" height="12" forecolor="#333333" uuid="058fcaa6-2d37-4acb-bf59-ee70507b5335"/>
-				<textElement markup="none">
-					<font fontName="Dialog" size="7" isBold="false"/>
-					<paragraph lineSpacing="Single"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$P{RESOURCE}.getString("bank_references_"+$F{ad_language})]]></textFieldExpression>
-			</textField>
-			<textField isBlankWhenNull="true">
 				<reportElement positionType="Float" x="108" y="274" width="115" height="12" forecolor="#333333" uuid="0ec114ec-fcce-47cd-b3b5-c4ce74c74201"/>
 				<textElement markup="none">
 					<font fontName="Dialog" size="7" isBold="false"/>
@@ -560,14 +552,6 @@ ORDER BY
 				<reportElement x="2" y="0" width="549" height="85" uuid="c5bf79b6-cf2e-4044-bc46-b34fb0997ee4"/>
 				<imageExpression><![CDATA[$F{ad_image_binarydata}]]></imageExpression>
 			</image>
-			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement positionType="Float" x="118" y="324" width="415" height="12" isRemoveLineWhenBlank="true" uuid="6cf1fce4-225c-4cf2-9ee5-ab72101f8d9f"/>
-				<textElement>
-					<font size="8"/>
-					<paragraph lineSpacing="Single"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$P{RESOURCE}.getString("bank_name_"+$F{ad_language}) +" : "+ ($F{c_bank_name} == null ? "" : $F{c_bank_name}) + "     " + $P{RESOURCE}.getString("iban_"+$F{ad_language})+" : "+($F{c_bankaccount_iban} == null ? "" : $F{c_bankaccount_iban}) +"     "+ $P{RESOURCE}.getString("swift_"+$F{ad_language}) +" : "+ ($F{c_bank_swiftcode} == null ? "" : $F{c_bank_swiftcode})]]></textFieldExpression>
-			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 				<reportElement positionType="Float" x="336" y="98" width="205" height="14" isRemoveLineWhenBlank="true" uuid="8c9f7429-3620-4a47-870f-04cacc39cdce"/>
 				<textElement>
@@ -679,7 +663,7 @@ ORDER BY
 				<textFieldExpression><![CDATA[$P{RESOURCE}.getString("attention_"+$F{ad_language}) + " " + ($F{ad_user_name} == null ? " " : $F{ad_user_name})]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement positionType="Float" x="3" y="350" width="548" height="12" isRemoveLineWhenBlank="true" uuid="56627e1a-7996-4c77-8e45-1bd6beedb5fc"/>
+				<reportElement positionType="Float" x="2" y="330" width="548" height="12" isRemoveLineWhenBlank="true" uuid="56627e1a-7996-4c77-8e45-1bd6beedb5fc"/>
 				<textElement>
 					<font size="10"/>
 					<paragraph lineSpacing="Single"/>
